--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8" />
+	<meta charset="utf-8">
+	<meta http-equiv="refresh" content="5">
 	<title>Space Flavor Wallboard</title>
 
 	<style type="text/css">
